@@ -22,6 +22,7 @@ Jump Start Changelog
 	* Added filter `themeblvd_sidebar_args` added, which is shared with Theme Blvd Widget Areas plugin; this filters arguments passed to `register_sidebar()` for custom and theme widget areas.
 	* Added filter `themeblvd_element_{$type}_options` to modify options for any element being outputted from the layout builder.
 	* Added filter `themeblvd_element_{$type}_display` to modify display options for any element being outputted from the layout builder.
+	* Added additional CSS classes to contact buttons and social sharing buttons, for more complex styling.
 * Third-Party Plugin Compatibility
 	* bbPress: "Lead Topic" enabled by default, with no more theme option to disable. Use filter `themeblvd_bbp_show_lead_topic` to disable.
 	* bbPress: Added option to disable theme's bbPress styling at *Appearance > Theme Options > Plugins > bbPress*.
